--- a/_posts/2023-08-28-3-10-years.markdown
+++ b/_posts/2023-08-28-3-10-years.markdown
@@ -43,7 +43,7 @@ Living in Europe had always been a dream of mine, ever since spending much of my
 
 My Ph.D., was nothing short of wonderful experiences: I spent weekends in various different cities, traveled to 20+ different universities giving talks on CRDTs, Erlang, and distributed systems, and met (and collaborated with) some of the most friendly and welcomining people that I will call friends for the rest of my life.
 
-However, my research progress was awful.  This wasn't to say that I wasn't doing research: I was writing code, building prototypes, showing off example applications, performing evaluations, etc.  In fact, when we finally presented our project results, I was one of the key presenters at our project review meeting in Brussels for the European Commission.  We had built a lot of software and it worked well, and it worked well at scale.  But, from the point of view of doing a Ph.D., I just felt stuck.  Perhaps my heart wasn't in CRDTs anymore: as it would seem, it wasn't and I completely abandoned it.
+However, my research progress was awful.  This wasn't to say that I wasn't doing research: I was writing code, building prototypes, showing off example applications, performing evaluations, etc.  In fact, when we finally presented our project results, I was one of the key presenters at our project review meeting in Brussels for the European Commission.  We had built a lot of software and it worked well, and it worked well at scale.  But, from the point of view of doing a Ph.D., I just felt stuck.  Perhaps my heart wasn't in CRDTs anymore: as it would seem, it wasn't and I completely abandoned it as a research topic.
 
 Thankfully, I got an internship at Microsoft Research in Redmond, primarily thanks to my previous work on Erlang and actor systems.  This work, over the summer, is work that ultimately lead to the transactional semantics in Orleans, but it was a rough start.  When arriving at Microsoft, I didn't know what to do.  I wasn't used to the culture of _extremely, minimal supervision_ and spent the first month just drinking coffee and reading papers that I thought were relevant.  I didn't know transactions, I didn't know how they worked, I didn't know the names of all of the properties of isolation or whatever.
 
