--- a/_posts/2023-08-28-3-10-years.markdown
+++ b/_posts/2023-08-28-3-10-years.markdown
@@ -9,9 +9,9 @@ June 03, 2023 marks _10 years_ since I started my blog, and, it's sort of mind b
 
 When I go back and look at my old posts on my blog, well, it's quite fitting that my *first blog post* was on fault injection and fault tolerance, because that's the topic that ultimately became my Ph.D. research, of which I've been focused on since 2015... but really since 2018.  
 
-Since creation of this blog, I've been lucky to have _many_ of these posts make the front page of Hacker News and Lobsters, which at minimum encouraged me to keep going.  The visibility has been instrumental to my career, despite the (sometimes) negative comments, but, wow... what a ride it has been.
+Since creation of this blog, I've been lucky to have _many_ of these posts make the front page of Hacker News and Lobsters, which at minimum, encouraged me to keep going.  This visibility has been instrumental to my career, despite the (sometimes) negative comments, but, wow... what a ride it has been.
 
-But, perhaps what is most interesting to me, is that the genesis of this blog was at the exact moment that I first ventured into research.  When I started my dream in 2013 --- when I started this blog sitting in a wicker chair in the corner of the living room of my close friend Greg in San Francisco with a re-run of _Friends_ on in the background --- my goal was to work at Microsoft Research.  When I started my Ph.D. in 2015, my goal was to be a professor in France.  In 2018, I thought I might be a teaching professor in the US.  In 2023: ??? 
+But, perhaps what is most interesting to me, is that the genesis of this blog was at the exact moment that I first ventured into research.  When I started my dream in 2013 --- when I started this blog sitting in a wicker chair in the corner of the living room of my close friend Greg in San Francisco with a re-run of _Friends_ on in the background --- my goal was to work at Microsoft Research.  When I started my Ph.D. in 2015, my goal was to be a professor in France.  In 2018, I thought I might be a teaching professor in the US.  
 
 Things change: shit, it's been _only_ 10 years!
 
@@ -27,7 +27,7 @@ However, by 2013, I was very interested in both Erlang and distributed systems a
 
 In 2013, I decided I wanted to start grad school to _really_ learn about a programming area, as as I was living in Rhode Island, reached out to Brown University, where some members of my family had attended.  They wanted nothing to do with me for several reasons.  First, I didn't have a degree in CS, because I got one in IT part-time at Northeastern University after getting an associate's degree at the Community College of Rhode Island.  Second, I had no research experience.  I was told "no research potential" by one prominant faulty member, which reminded me of Zappa's infamous "no commercial potential" response.  Finally, after reaching out to a professor at Brown based on a paper he published that I had reimplemented for fun -- and once I told him that I programmed Erlang in industry --- he gave me permission to enroll in courses as a "special student."
 
-A "special student" means a couple different things.  First, that you have to carry around a bright pink slip to all of your courses on the first day of classes begging to be admitted to the professor of the class, as you are not a degree student.  Second, that you have to pay your own way --- at the time, $6k a course.  I doubled down, got my slips signed, and blew a family inheritance to take my courses.  I took a database seminar (not knowing what a seminar was) and a programming language course with Coq (not knowing what Coq or programming languages really were, outside of writing computer programs.)  I got lucky in that both of my course projects were decent.  In fact, I dicussed one at RICON, the distributed systems conference in 2013: my work on writing CRDT proofs --- really, really, awful trivial proofs, but the first person to actually _try_ writing proofs for CRDTs --- and it seemingly got me noticed by many people in the field.  I was in!
+A "special student" means a couple different things.  First, that you have to carry around a bright pink slip to all of your courses on the first day of classes begging to be admitted to the professor of the class, as you are not a degree student.  Second, that you have to pay your own way --- at the time, $6k a course.  I doubled down, got my slips signed, and blew (part of) a family inheritance to take my courses.  I took a database seminar (not knowing what a seminar was) and a programming language course with Coq (not knowing what Coq or programming languages really were, outside of writing computer programs.)  I got lucky in that both of my course projects were decent.  In fact, I dicussed one at RICON, the distributed systems conference in 2013: my work on writing CRDT proofs --- really, really, awful trivial proofs, but the first person to actually _try_ writing proofs for CRDTs --- and it seemingly got me noticed by many people in the field.  I was in!
 
 In 2014, Basho established a research consortium with a number of universities in the European Union to work on the development of CRDTs for use inside of Riak.  I wasn't invited, but several of my friends/colleagues were.  One January evening, lying in bed with the flu in my parents spare bedroom a few days after Christmas, I asked a colleague where they were going in Europe.  When I found out, I applied for a Delta credit card, was accepted, bought a flight, asked my colleague if I could room with him for the event, booked an AirBnb in the city, and just showed up there myself and said "hey, I'm with Basho."  From then on, I became involed in the research project in several different capactities over time, travelling back and forth to Europe for the company.
 
