--- a/_posts/2023-08-28-3-10-years.markdown
+++ b/_posts/2023-08-28-3-10-years.markdown
@@ -19,7 +19,7 @@ In some ways, it is fitting that this 10 year milestone corresponds with the yea
 
 ### The Inticement of Research
 
-I started this blog as a Software Engineer at Basho Technologies, a now-defunct distributed systems company that was primarily focused on writing a fault-tolerant, highly scalable distributed database in Erlang.  At the time, I was a JavaScript developer building the UX for Basho's distributed database, Riak.  I did not know Erlang --- only enough to maintain a job where I had to produce JSON from Erlang to build the UX for Riak --- and, I barely knew JavaScript.  However, I was not new to programming as I had been a software engineer, systems engineer, and even a software engineering manager for many years before coming to Basho.  But, I ended up here because when I became a manager, I decided it wasn't for me and I wanted to be a programmer again and restarted my career from the beginning as a junior developer and working my way back up.  I slowly mo/vowved from being primarily a TCL programmer for web applications --- ArsDigita crew represent! --- to manager, and then back down again to a Ruby programmer, and up again, to finally, a JavaScript developer at Basho.
+I started this blog as a Software Engineer at Basho Technologies, a now-defunct distributed systems company that was primarily focused on writing a fault-tolerant, highly scalable distributed database in Erlang.  At the time, I was a JavaScript developer building the UX for Basho's distributed database, Riak.  I did not know Erlang --- only enough to maintain a job where I had to produce JSON from Erlang to build the UX for Riak --- and, I barely knew JavaScript.  However, I was not new to programming as I had been a software engineer, systems engineer, and even a software engineering manager for many years before coming to Basho.  But, I ended up here because when I became a manager, I decided it wasn't for me and I wanted to be a programmer again and restarted my career from the beginning as a junior developer and working my way back up.  I slowly moved from being primarily a TCL programmer for web applications --- ArsDigita crew represent! --- to manager, and then back down again to a Ruby programmer, and up again, to finally, a JavaScript developer at Basho.
 
 I really knew nothing of distributed systems at the time.  I didn't read my first distributed systems paper until 2012.
 
@@ -39,9 +39,9 @@ Things were looking up.
 
 ### The First Attempt at Research
 
-Living in Europe had always been a dream of mine, ever since spending much of my Information Technology degree at Northeastern studying French film, French literature, and having spent much time in Paris with a former romatic partner of mine who was born there.  I loved the culture, the city, and fully embraced the lifestyle: it honestly felt like an absolute _dream_.  There is no place else I would ever want to spend the rest of my life.  
+Living in Europe had always been a dream of mine, ever since spending much of my Information Technology degree at Northeastern watching French film, reading French literature, and having spent much time in Paris with a former romatic partner of mine who was born there.  I loved the culture, the city, and fully embraced the lifestyle: it honestly felt like an absolute _dream_.  There is no place else I would ever want to spend the rest of my life.  
 
-My Ph.D., was nothing short of wonderful experiences: I spent weekends in various different cities, traveled to 20+ different universities giving talks on CRDTs, Erlang, and distributed systems, and met (and collaborated with) some of the most friendly and welcomining people that I will call friends for the rest of my life.
+At the start, my Ph.D., was nothing short of wonderful experiences.  I spent weekends in various different cities, traveled to 20+ different universities giving talks on CRDTs, Erlang, and distributed systems, and met (and then collaborated with) some of the most friendly and welcomining people that I will call friends for the rest of my life.
 
 However, my research progress was awful.  This wasn't to say that I wasn't doing research: I was writing code, building prototypes, showing off example applications, performing evaluations, etc.  In fact, when we finally presented our project results, I was one of the key presenters at our project review meeting in Brussels for the European Commission.  We had built a lot of software and it worked well, and it worked well at scale.  But, from the point of view of doing a Ph.D., I just felt stuck.  Perhaps my heart wasn't in CRDTs anymore: as it would seem, it wasn't and I completely abandoned it as a research topic.
 
@@ -58,13 +58,13 @@ I lived in Europe, and I couldn't eat bread anymore without getting horribly sic
 
 When my internship ended, it was time to return to Europe, but a condition of my Ph.D. grant (Erasmus) was that I had to switch universities every year and have two different Ph.D. advisors, so I returned to Belgium and after a few months headed off to Lisbon.  In Lisbon, I fared less well: I knew French, but didn't know Portuguese, and I also had to communicate to everyone that I couldn't have dairy or gluten anymore.  Complicating this, my Ph.D. advisor in Lisbon wanted me to work on a different project than my Ph.D. advisor in Belgium did.  I was lost, between conflicting responsibilities from different advisors, while sick, in a place where I didn't speak the language.  I hobbled along for almost a year --- completely lost, depressed, sick, alone, and otherwise miserable --- and was lucky enough to be invited back to Microsoft Research.
 
-At Microsoft Research that year, I was mentored by Sebastian Burckhardt, who was involved in our previous project as well and who has since become a close friend of mine.  Sebastian, who I had known for a long time because he was extremely critical of my CRDT work years earlier, is an incredible human.  Just a fantastic mentor, great person, who helped me to grow in a number of ways.  Here, we took the ideas we developed in Orleans and built the first version of stateful serverless, which we open sourced at the time, and became Durable Entities on Azure.  Not only this, but Sebastian introduced me to Jonathan Goldstein at Microsoft, where I got to work with cutting edge database systems and help define part of that systems API.  I was eating gluten-free, things were great, and I was flying high.
+At Microsoft Research that year, I was mentored by Sebastian Burckhardt, who was involved in our previous project as well and who has since become a close friend of mine.  Sebastian, who I had known for a long time because he was extremely critical of my CRDT work years earlier, was a a fantastic mentor and great person, who helped me to grow in a number of ways.  Here, we took the ideas we developed in Orleans and built the first version of stateful serverless, which we open sourced at the time, and became Durable Entities on Azure.  Not only this, but Sebastian introduced me to Jonathan Goldstein at Microsoft, where I got to work with cutting edge database systems and help define part of that systems API.  I was eating gluten-free, things were great, and I was flying high.
 
 But, on return to Europe, I was miserable.  Back in the same place, with no direction, no clear end to the Ph.D., despite being in year 3 of my 3 year funding, and sick once again from being able to properly control my diet in the foreign land.  I dabbled with starting a company in France based on our previous work -- we met with several VC funds which didn't pan out.  Instead, I spent a few months there, and upon returning to the United States, quit my Ph.D. via email from a bar (Miracle of Science, it's you!) on Massachusetts Avenue in Cambridge, Massachusetts while watching a Boston Celtics game on the television and told my collaborators that I would not be starting a company in France.  I left all of my belongings, outside of what I could carry in a suitcase, in my apartment in Portugal, which my landlord claimed as payment for the security deposit.  I was lucky enough, that I had already accepted an offer for a return to Microsoft Research that summer, depsite having just quit my Ph.D.
 
 Upon return to Microsoft, things were great.  I corrected my diet, was living a place where I could control cross-contimation by not sharing a kitchen with other students, had a car to grocery shop, and was doing quite well.  However, from the research perspective, I was making less progress.  I was working on effects systems and capturing nondeterminism and built two different versions of the system -- one research with strong guarantees and one practical with fewer guranteees, which both worked --- but no one seemed particularily impressed.  I felt like I was doing very pratical useful work, but my research presentations were under-attended and no one seemed to really care.  I still felt lost.
 
-Not knowing what to do with what remained of my (non-existent) career, I was lucky enough to get enrolled at Northeastern University as Ph.D. student thanks to my future Ph.D. advisor Heather Miller --- who I had known from many moon ago when she was a grad student and I was an industry participant at a PL summer school in Oregon, and who I organized the Curry On conferences at ECOOP with --- and who I had been working with on and off on projects while I was untethered in Boston since quitting, to promising success.  However, by the time I finished up at Microsoft, she had left Northeastern and was on her way to Pittsburgh, PA, at Carnegie Mellon University.  Carnegie Mellon was _a bit_ of an upgrade from a smaller European university in Belgium and, definitely so for someone who Brown University considered had "no research potential."  And, it _showed_.  
+Not knowing what to do with what remained of my (non-existent) career, I was lucky enough to get enrolled at Northeastern University as Ph.D. student thanks to my future Ph.D. advisor Heather Miller --- who I had known from many moons ago when she was a grad student and I was an industry participant at a PL summer school in Oregon, and who I organized the Curry On conferences at ECOOP with --- and who I had been working with on and off on projects while I was untethered in Boston since quitting, to promising success.  However, by the time I finished up at Microsoft, she had left Northeastern and was on her way to Pittsburgh, PA, at Carnegie Mellon University.  Carnegie Mellon was _a bit_ of an upgrade from a smaller European university in Belgium and, definitely so for someone who Brown University considered had "no research potential."  And, it _showed_.  
 
 My first semester, I failed out of one of my courses and landed in the hospital for a full week: overwork, stress, and an improper diet had caused my pancreas to go into overdrive and I was at risk for pancreas failure.  However, with some rest and a slight course correction at CMU, things got back to normal and soon enough I was passing courses and doing good research.  I ended up taking my work on building an evaluation framework for our SyncFree work three years prior and turning it into a top-tier conference paper at USENIX ATC my first year at CMU with the help of Heather.  Things were looking up, but I had absolutely no direction how to proceed.  This was soon to change.
 
